tests/paczka1/small_fuzzy/22836626.err
Error in line 1: 5vjpG S62 92,1
Error in line 3: azhRYZjsMf S580 43,7
Error in line 7: jWRpQF1ss S62 95,0
